# weather_predictions

./: LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
weather_prediction/: __init__.py  dataset.py  features.py  plots.py
weather_prediction/modeling/: predict.py  train.py
